--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,7 +6,14 @@
 @import "partials/reset";
 @import "partials/timeline";
 
+div.line{
+  transform-origin: 0 100%;
+  height: 10px; /* Line width of 3 */
+  background: #fff; /* White fill */
+}
+
 #app {
   padding: 5px;
   background-color: $flat-blue-4;
+  min-height: 100vh;
 }
