--- a/app/styles/partials/_cards.scss
+++ b/app/styles/partials/_cards.scss
@@ -34,9 +34,9 @@
 
   .card-image {
     overflow: hidden;
+    background-color: $card-image-hover-color;
     height: 150px;
     max-height: 150px;
-    background-color: $card-image-hover-color;
 
     img {
       @include transition (all 0.2s ease-in-out);
@@ -44,6 +44,11 @@
       border-top-right-radius: $base-border-radius;
       width: 100%;
       opacity: 1;
+
+      height: 150px;
+      max-height: 150px;
+
+      background-size: cover;
     }
   }
 
